<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/life_story_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/life_story_lines"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/family_tree_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family_tree_lines"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/spouse_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spouse_lines"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/father_side_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/father_s_side_events"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/mothers_side_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mother_s_side_events"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/male_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/male_events"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/female_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/female_events"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoutButton"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />


</LinearLayout>
