<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventInfoBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="left"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/genderIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/picture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/relativeNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/familyRelationshipView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_relationship"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</LinearLayout>
